--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Tanks Survey</title>
   </head>
   <style>
+    #cole {
+      border-collapse: collapse;
+    }
     .c {
       border-style: solid;
       border-width: 1px 0px 1px 1px;
@@ -59,45 +62,47 @@
       <thead>
         <tr>
           <th></th>
-          <th class="close">T-34</th>
-          <th class="cv">KV-1</th>
+          <th class="close" id="cole">T-34</th>
+          <th class="cv" id="cole">KV-1</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td class="l">Armour</td>
-          <td class="r">2.36 inches</td>
-          <td class="c">2.95276 inches</td>
+          <td class="l" id="cole">Armour</td>
+          <td class="r" id="cole">2.36 inches</td>
+          <td class="c" id="cole">2.95276 inches</td>
         </tr>
         <tr>
-          <td>Top Speed</td>
-          <td>32 mph</td>
-          <td>25 mph</td>
+          <td class="l" id="cole">Top Speed</td>
+          <td class="r" id="cole">32 mph</td>
+          <td class="c" id="cole">25 mph</td>
         </tr>
         <tr>
-          <td>Type</td>
-          <td>Medium</td>
-          <td>Heavy</td>
+          <td class="l" id="cole">Type</td>
+          <td class="r" id="cole">Medium</td>
+          <td class="c" id="cole">Heavy</td>
         </tr>
         <tr>
-          <td>Crew</td>
-          <td>4</td>
-          <td>5</td>
+          <td class="l" id="cole">Crew</td>
+          <td class="r" id="cole">4</td>
+          <td class="c" id="cole">5</td>
         </tr>
         <tr>
-          <td>Tank Gun</td>
-          <td>3 inches</td>
-          <td>3 inches</td>
+          <td class="l" id="cole">Tank Gun</td>
+          <td class="r" id="cole">3 inches</td>
+          <td class="c" id="cole">3 inches</td>
         </tr>
         <tr>
-          <td>Weight</td>
-          <td>26 tons</td>
-          <td>100 tons</td>
+          <td class="l" id="cole">Weight</td>
+          <td class="r" id="cole">26 tons</td>
+          <td class="c" id="cole">100 tons</td>
         </tr>
         <tr>
-          <td>Engine</td>
-          <td>Model V-2-34 38.8 L V12 Diesel engine of 500 hp</td>
-          <td>600 hp V-2K</td>
+          <td class="l" id="cole">Engine</td>
+          <td class="r" id="cole">
+            Model V-2-34 38.8 L V12 Diesel engine of 500 hp
+          </td>
+          <td class="c" id="cole">600 hp V-2K</td>
         </tr>
       </tbody>
     </table>
