--- a/index.html
+++ b/index.html
@@ -7,37 +7,44 @@
     <title>Tanks Survey</title>
   </head>
   <style>
-    #cole {
-      border-collapse: collapse;
-    }
     .c {
+      border-collapse: collapse;
       border-style: solid;
       border-width: 1px 0px 1px 1px;
-      border-collapse: collapse;
       border-color: gray;
     }
     .l {
+      border-collapse: collapse;
       border-style: solid;
       border-width: 1px 1px 1px 0px;
-      border-collapse: collapse;
       border-color: gray;
     }
     .r {
+      border-collapse: collapse;
       border-style: solid;
       border-width: 1px 0px 1px 0px;
-      border-collapse: collapse;
       border-color: gray;
     }
     .close {
+      border-collapse: collapse;
       border-style: solid;
       border-width: 0px 0px 0px 1px;
-      border-collapse: collapse;
       border-color: gray;
     }
     .cv {
+      border-collapse: collapse;
       border-style: solid;
       border-width: 0px 0px 0px 1px;
-      border-collapse: collapse;
+      border-color: gray;
+    }
+    .special {
+      border-style: solid;
+      border-width: 0px 0px 0px 1px;
+      border-color: gray;
+    }
+    .special2 {
+      border-style: solid;
+      border-width: 0px 1px 0px 0px;
       border-color: gray;
     }
     img {
@@ -62,47 +69,47 @@
       <thead>
         <tr>
           <th></th>
-          <th class="close" id="cole">T-34</th>
-          <th class="cv" id="cole">KV-1</th>
+          <th class="close">T-34</th>
+          <th class="cv">KV-1</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td class="l" id="cole">Armour</td>
-          <td class="r" id="cole">2.36 inches</td>
-          <td class="c" id="cole">2.95276 inches</td>
+          <td class="l">Armour</td>
+          <td class="r">2.36 inches</td>
+          <td class="c">2.95276 inches</td>
         </tr>
         <tr>
-          <td class="l" id="cole">Top Speed</td>
-          <td class="r" id="cole">32 mph</td>
-          <td class="c" id="cole">25 mph</td>
+          <td class="l">Top Speed</td>
+          <td class="r">32 mph</td>
+          <td class="c">25 mph</td>
         </tr>
         <tr>
-          <td class="l" id="cole">Type</td>
-          <td class="r" id="cole">Medium</td>
-          <td class="c" id="cole">Heavy</td>
+          <td class="l">Type</td>
+          <td class="r">Medium</td>
+          <td class="c">Heavy</td>
         </tr>
         <tr>
-          <td class="l" id="cole">Crew</td>
-          <td class="r" id="cole">4</td>
-          <td class="c" id="cole">5</td>
+          <td class="l">Crew</td>
+          <td class="r">4</td>
+          <td class="c">5</td>
         </tr>
         <tr>
-          <td class="l" id="cole">Tank Gun</td>
-          <td class="r" id="cole">3 inches</td>
-          <td class="c" id="cole">3 inches</td>
+          <td class="l">Tank Gun</td>
+          <td class="r">3 inches</td>
+          <td class="c">3 inches</td>
         </tr>
         <tr>
-          <td class="l" id="cole">Weight</td>
-          <td class="r" id="cole">26 tons</td>
-          <td class="c" id="cole">100 tons</td>
+          <td class="l">Weight</td>
+          <td class="r">26 tons</td>
+          <td class="c">100 tons</td>
         </tr>
         <tr>
-          <td class="l" id="cole">Engine</td>
-          <td class="r" id="cole">
+          <td>Engine</td>
+          <td class="special">
             Model V-2-34 38.8 L V12 Diesel engine of 500 hp
           </td>
-          <td class="c" id="cole">600 hp V-2K</td>
+          <td>600 hp V-2K</td>
         </tr>
       </tbody>
     </table>
@@ -119,3 +126,4 @@
     <p>Wikipedia and W3 Schools</p>
   </body>
 </html>
+
